--- a/package.json
+++ b/package.json
@@ -46,10 +46,11 @@
   "version": "0.0.1",
   "jest": {
     "unmockedModulePathPatterns": [
+      "<rootDir>/node_modules/enzyme/",
       "<rootDir>/node_modules/react/",
+      "<rootDir>/node_modules/react-addons-test-utils/",
       "<rootDir>/node_modules/react-dom/",
-      "<rootDir>/node_modules/react-test-renderer/",
-      "<rootDir>/node_modules/react-addons-test-utils/"
+      "<rootDir>/node_modules/react-test-renderer/"
     ]
   }
 }
